# tensorrt-cpp-api

./: CMakeLists.txt  LICENSE  README.md
include/: Int8Calibrator.h  cmd_line_parser.h  engine.h  macros.h
include/engine/: EngineBuildLoadNetwork.inl  EngineRunInference.inl  EngineUtilities.inl
include/interfaces/: IEngine.h
include/util/: Stopwatch.h  Util.h  Util.inl
src/: benchmark.cpp  engine.cpp
